tests/ui/validate_custom_nonsense.stderr
error: expected expression
 --> $DIR/validate_custom_nonsense.rs:6:25
  |
6 |     #[validate(validator = "struct CustomValidator;")]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
